Fix dropdown height on small viewport heights

--- a/packages/vscode-extension/src/webview/components/UrlSelect.css
+++ b/packages/vscode-extension/src/webview/components/UrlSelect.css
@@ -164,9 +164,9 @@
   display: inline-block;
 }
 
-@media (height <= 450px) {
+@media (height <= 500px) {
   .url-select-viewport {
-    max-height: 50vh;
+    max-height: 30vh;
   }
 }
 @media (width <= 580px) {
